--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   flutter_svg: ^2.0.4
   country_code_picker: ^3.0.0
+  dio: ^5.0.3
 
 dev_dependencies: 
   flutter_lints: 2.0.1
