--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter_svg: ^2.0.4
   country_code_picker: ^3.0.0
   dio: ^5.0.3
+  flutter_hooks: ^0.18.6
 
 dev_dependencies: 
   flutter_lints: 2.0.1
