--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   country_code_picker: ^3.0.0
   dio: ^5.0.3
   flutter_hooks: ^0.18.6
+  http: ^0.13.5
 
 dev_dependencies: 
   flutter_lints: 2.0.1
