--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,28 +2,29 @@ name: customer_info
 version: 1.0.0+1
 publish_to: none
 description: A new Flutter project.
-environment: 
-  sdk: '>=2.19.4 <3.0.0'
+environment:
+  sdk: ">=2.19.4 <3.0.0"
 
-dependencies: 
+dependencies:
   cupertino_icons: ^1.0.2
   get: 4.6.5
-  flutter: 
+  flutter:
     sdk: flutter
   flutter_svg: ^2.0.4
   country_code_picker: ^3.0.0
   dio: ^5.0.3
   flutter_hooks: ^0.18.6
   http: ^0.13.5
+  fluttertoast: ^8.2.1
+  shared_preferences: ^2.1.0
 
-dev_dependencies: 
+dev_dependencies:
   flutter_lints: 2.0.1
-  flutter_test: 
+  flutter_test:
     sdk: flutter
 
-flutter: 
+flutter:
   uses-material-design: true
-  assets: 
+  assets:
     - assets/
     - assets/svg/
-
